--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                        
+6:36 PM 10/6/2017	CO	File > Open > removed option to have a different Destination Company Number as it unnecessarily complicated things.
 8:59 AM 10/4/2017	CO	File > Save As fixes and enhancments for Clients whom can not see server outside of BR
 12:08 PM 10/3/2017	U4	Create Hand Held File got improved open logic - all formats should now respect override selections  from File > Properties
 14:24 10/17/2017	CO	5.73056  
