--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                           
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                           
+2:59 PM 10/17/2017	CO	Report Cache is always on.
 11:16 10/17/2017	CO	5.73059  
 12:42 10/17/2017	CO	5.73058   
 12:35 10/17/2017	CO	5.73057    
