acs online user limits enforced

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                  
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                                  
+9:18 AM 11/6/2017	CO	user limits enforced in ACS Online
  9:48 11/17/2017	CO	5.73066  
 12:06 10/17/2017	CO	5.73065   
 12:09 PM 10/31/2017	GL	Fixed a Close Month hanging issue 
