location id lookups in customer file

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                            
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                                            
+7:34 AM 11/30/2017	UB	Customer File - Added Location ID Selection option
 19:16 11/17/2017	CO	5.73076  
 13:37 11/17/2017	CO	5.73075   
 13:30 11/17/2017	CO	5.73074    
