ub collections allocations fixed.

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                          
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                                                                                                                                                                          
+4:44 PM 12/4/2018	UB	Collections - allocations issues corrected - beta version
 10:50 AM 11/20/2018	U4	Badger Beacon adjustments
 17:44 11/18/2018	CO	5.74056  
 11:36 11/18/2018	CO	5.74055   
