fixed balance breakdown side - also simplified (perhaps over) the allocation logic... may be issues caused by commenting out complicated budget allocation logic and going simpler instead.

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                     
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                                                                                                                                                                                     
+2:36 PM 1/1/2019	UB	Collections - balance breakdown was not properly displaying during allocation screen
 11:32 12/18/2018	CO	5.74070  
 10:38 12/18/2018	CO	5.74069   
 9:45 12/18/2018	CO	5.74068    
