--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,5 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                       
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                                                                                                                                                                                       
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                                                                                                                                                   10:55 AM 1/2/2019	UB	fixed bug that was forcing reverse billing to individual radio button                                                               
 10:44 01/19/2019	CO	5.74072  
 14:42 01/19/2019	CO	5.74071   
 2:36 PM 1/1/2019	UB	Collections - balance breakdown was not properly displaying during allocation screen  
