--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                         
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                      
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________  
+11:01 02/20/2019	CK	adjusted checks for 1141                                    
  9:02 02/19/2019	CO	5.74106  
 7:58 02/19/2019	CO	5.74105   
 11:36 02/19/2019	CO	5.74104    
