Limited billing date to the last two weeks to prevent bad billing date error. and recompiles

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                            
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________       
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________ 
+14:38 03/19/2019	UB	Limited billing date to the last two weeks to prevent bad billing date error      
 11:09 03/19/2019	CO	5.74115  
 11:04 AM 3/6/2019	CO	minor change to increase stability of fnstatus's cached values 
 16:45 02/19/2019	CO	5.74114   
