Considerable updates to the Transaction report totals make it more logical and accurate: "Penalty" on Charges (CHG) rows now appear as blanks because they are potential charges and not actively applied until after the passed due date. Collections amounts now reduce the grand total. For example a Collection of $100 and a charge of 150 will now dispaly a total of $50 instead of $250 as before. This means that when printing Only Collections, the totals will appear negative ie (-100).

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                   
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________        
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________   
+11:28 04/02/2019	UB	5.74123 changed bill print order for 440     
 14:37 04/19/2019	CO	5.74122  
 14:32 04/19/2019	CO	5.74121   
 2:31 PM 4/1/2019	CO	client 2900 - add license for 2nd user  
