email invoices update for TM and compiles

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                              
-______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________            
+______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________   
+11:23 AM 8/20/2019	UB	clarified active customer status with note for client 2900
+3:23 PM 8/15/2019	EM	Preferences for Email Add-On added         
 16:40 08/19/2019	CO	5.74183  
 4:40 PM 8/22/2019	UB	Fixed 857 bug in Additional Penalty Calculation 
 3:23 PM 8/15/2019	EM	Preferences for Email Add-On added 
