--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                               
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________    
+11:30 AM 8/26/2019	UB	Export UB Master File - Added Serial numbers for services 1,3 and 5
 4:32 PM 8/23/2019	CO	Fixed a glitch in key building in fnHamster
  9:44 08/19/2019	CO	5.74184  
 11:23 AM 8/20/2019	UB	clarified active customer status with note for client 2900 
